--- a/src/style.css
+++ b/src/style.css
@@ -1,3 +1,6 @@
+html{
+  scroll-behavior: smooth !important;
+}
 body{
   overflow-x: hidden;
   position: relative;
@@ -10,6 +13,14 @@ body{
 }
 .ant-menu-item:hover{
 text-decoration: none !important;
+}
+
+a{
+  color: #fff !important;
+}
+a:hover{
+color: yellow !important;
+
 }
 /* 
 button {
